--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Lprone Feeds Reader</title>
-    
-	<link rel="stylesheet" href="getrss.css">
-    
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-	
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="getrss.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111005437-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -15,9 +13,7 @@
         gtag('js', new Date());
         gtag('config', 'UA-111005437-1');
     </script>   	
-	
     <script src="getrss.js"></script>
-
   </head>
 
   <body>
@@ -31,8 +27,6 @@
         <option value="infobae">Infobae</option>
         <option disabled>────────────────</option>
         <option value="laVoz">La Voz del Interior</option>
-        <option value="telediario">Telediario</option>
-        <!--option value="rio4info">Rio Cuarto Info</option-->
         <option disabled>────────────────</option>
         <option value="BBC">BBC</option>
         <option value="NacionMundo">La Nacion Mundo</option>
