--- a/index.html
+++ b/index.html
@@ -22,32 +22,32 @@
       <select id="rssList" onchange="showRSS(this.value)" style="height:40px;">
         <option disable selected value="">Lprone Feeds Reader</option>
         <option value="Clarin ">Clarin </option>
-        <option value="Nacion">La Nacion</option>
-        <option value="iprofesional">iProfesional</option>
-        <option value="infobae">Infobae</option>
+        <option value="LaNacion">La Nacion</option>
+        <option value="Iprofesional">iProfesional</option>
+        <option value="Infobae">Infobae</option>
         <option disabled>────────────────</option>
-        <option value="laVoz">La Voz del Interior</option>
+        <option value="LaVoz">La Voz del Interior</option>
         <option disabled>────────────────</option>
         <option value="BBC">BBC</option>
-        <option value="NacionMundo">La Nacion Mundo</option>
-        <option value="cnn">CNN</option>
+        <option value="LaNacionMundo">La Nacion Mundo</option>
+        <option value="CNN">CNN</option>
         <option value="MuyInt">Muy Interesante</option>
         <option disabled>────────────────</option>
         <option value="ClarinTecno">Clarin Tecnología</option>
-        <option value="NacionTecno">La Nacion Tecnología</option>
-        <option value="vozTecno">La Voz Tecnología</option>
-        <option value="muyComputer">Muy Computer</option>
-        <option value="ticbeat">TeacBeat</option>
-        <option value="fayerWayer">FayerWayer</option>
+        <option value="LaNacionTecno">La Nacion Tecnología</option>
+        <option value="LaVozTecno">La Voz Tecnología</option>
+        <option value="MuyComputer">Muy Computer</option>
+        <option value="Ticbeat">TeacBeat</option>
+        <option value="FayerWayer">FayerWayer</option>
         <option disabled>────────────────</option>
-        <option value="cliCba">Clima Cordoba</option>
-        <option value="cliR4">Clima Rio Cuarto</option>
-        <option value="cliVT">Clima Venado Tuerto</option>
-        <option value="cliJN">Clima Junin</option>
+        <option value="ClimaCba">Clima Cordoba</option>
+        <option value="ClimaR4">Clima Rio Cuarto</option>
+        <option value="ClimaVT">Clima Venado Tuerto</option>
+        <option value="ClimaJN">Clima Junin</option>
         <option disabled>────────────────</option>
-        <option value="NacionDepo">La Nacion Deportes</option>
+        <option value="LaNacionDepo">La Nacion Deportes</option>
         <option value="ClarinFut">Clarin Futbol</option>
-        <option value="ole">OLE</option>
+        <option value="OLE">OLE</option>
       </select>
     </div>
   </header>
