--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container"> 
       <select id="rssList" onchange="showRSS(this.value)" style="height:40px;">
         <option disable selected value="">Lprone Feeds Reader</option>
-        <option value="Clarin ">Clarin </option>
+        <!--option value="Clarin ">Clarin </option-->
         <option value="LaNacion">La Nacion</option>
         <option value="Iprofesional">iProfesional</option>
         <option value="Infobae">Infobae</option>
@@ -29,15 +29,13 @@
         <option value="LaVoz">La Voz del Interior</option>
         <option disabled>────────────────</option>
         <option value="BBC">BBC</option>
-        <option value="LaNacionMundo">La Nacion Mundo</option>
         <option value="CNN">CNN</option>
         <option value="MuyInt">Muy Interesante</option>
         <option disabled>────────────────</option>
-        <option value="ClarinTecno">Clarin Tecnología</option>
-        <option value="LaNacionTecno">La Nacion Tecnología</option>
-        <option value="LaVozTecno">La Voz Tecnología</option>
+        <!--option value="ClarinTecno">Clarin Tecnología</option>
+        <option value="LaVozTecno">La Voz Tecnología</option-->
         <option value="MuyComputer">Muy Computer</option>
-        <option value="Ticbeat">TeacBeat</option>
+        <option value="TechCrunch">TechCrunch</option>
         <option value="FayerWayer">FayerWayer</option>
         <option disabled>────────────────</option>
         <option value="ClimaCba">Clima Cordoba</option>
@@ -45,8 +43,7 @@
         <option value="ClimaVT">Clima Venado Tuerto</option>
         <option value="ClimaJN">Clima Junin</option>
         <option disabled>────────────────</option>
-        <option value="LaNacionDepo">La Nacion Deportes</option>
-        <option value="ClarinFut">Clarin Futbol</option>
+        <!--option value="ClarinFut">Clarin Futbol</option-->
         <option value="OLE">OLE</option>
       </select>
     </div>
